--- a/Test/ws-delivery-test.yml
+++ b/Test/ws-delivery-test.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://dpg-ckq3eoprfc9c73ep2tl0-a.oregon-postgres.render.com/oneway_test
+    url: jdbc:postgresql://dpg-ckq3pq62eoec73906vmg-a.oregon-postgres.render.com/delivery_test
     username: root
-    password: VMY7odnbSBSm2RS01SzHSe21TJV7rFxk
+    password: eaaIhlmbkMnZUMjqVDdukpwj53FM8MjT
   jpa:
     hibernate:
       ddl-auto: update
