--- a/Preprod/ws-delivery-preprod.yml
+++ b/Preprod/ws-delivery-preprod.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
-    url: jdbc:mariadb://localhost:3306/delivery_test
+    url: jdbc:mariadb://onewayserver.online:7001/delivery_test
     username: root
     password:
   jpa:
