--- a/Preprod/ws-delivery-preprod.yml
+++ b/Preprod/ws-delivery-preprod.yml
@@ -3,7 +3,7 @@ spring:
     driver-class-name: org.mariadb.jdbc.Driver
     url: jdbc:mariadb://onewayserver.online:7001/delivery_test
     username: root
-    password:
+    password: root
   jpa:
     hibernate:
       ddl-auto: update
