--- a/Preprod/ws-delivery-preprod.yml
+++ b/Preprod/ws-delivery-preprod.yml
@@ -14,6 +14,6 @@ spring:
       hibernate: 
         format_sql: true
         jdbc:
-          time_zone: America/Asuncion
+          time_zone: UTC
 server:
   port: 8080
