--- a/Test/ws-delivery-test.yml
+++ b/Test/ws-delivery-test.yml
@@ -1,12 +1,20 @@
 spring:
   datasource:
+    time-zone: America/Asuncion
     driver-class-name: org.mariadb.jdbc.Driver
-    url: jdbc:mariadb://localhost:7001/delivery_test
-    username: root
-    password:
+    url: jdbc:mariadb://192.168.0.16:3306/delivery_test
+    username: delivery-backend
+    password: onewayservice
+
+
   jpa:
     hibernate:
       ddl-auto: update
-
+    show-sql: false    
+    properties:
+      hibernate: 
+        format_sql: true
+        jdbc:
+          time_zone: America/Asuncion
 server:
-  port: 3000
+  port: 8080
