Update: Se cambia el nombre del item de configuracion de security --> security-config para evitar conflictos con la libreria de spring security

--- a/Preprod/ws-delivery-preprod.yml
+++ b/Preprod/ws-delivery-preprod.yml
@@ -1,6 +1,6 @@
 spring:
 
-  security:
+  security-config:
     jwt:
       secret-key: o6Q2wFBee1Gpk8qRnLANhxITP9WSA8MI # Change this value to a secure key
       expiration-time: 86400000 # 1 day 
